Fix footer spacing

--- a/src/components/Foot/Foot.sass
+++ b/src/components/Foot/Foot.sass
@@ -8,14 +8,8 @@
 .foot__column
   text-align: center
 
-  &:not(:first-of-type)
-    margin-top: 32px
-
   @media #{$large-up}
     text-align: left
-
-    &:not(:first-of-type)
-      margin-top: 0
 
 .foot__lang
   margin-left: 24px
